@@ -10,15 +10,17 @@ REST API
 --------
 
 * API version has been upgraded to 5
-* added "/peers/{id}/system" route to test the connectivity with a remote peer (and eventually
+* Added "/peers/{id}/system" route to test the connectivity with a remote peer (and eventually
   retrieve its version number)
 * "/changes": Allow the "limit" argument to be greater than 100
 * "/instances/{id}/preview": Now takes the windowing into account
 * "/tools/log-level": Possibility to access and change the log level without restarting Orthanc
-* added "/instances/{id}/frames/{frame}/rendered" and "/instances/{id}/rendered" routes
+* Added "/instances/{id}/frames/{frame}/rendered" and "/instances/{id}/rendered" routes
   to render frames, taking windowing and resizing into account
 * "/instances": Support "Content-Encoding: gzip" to upload gzip-compressed DICOM files
 * ".../modify" and "/tools/create-dicom": New option "PrivateCreator" for private tags
+* Added "/modalities/{...}/storage-commitment" route
+* "/modalities/{...}/store" now accepts the Boolean argument "StorageCommitment"
 
 Plugins
 -------
